--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,12 @@
   box-sizing: border-box;
 }
 
-#btnSearch{
+#root{
+    background: linear-gradient(-45deg, #06283D, #dbdbdb, #06283D );
+    background-repeat: no-repeat;
+}
+
+/* #btnSearch{
   width:20%;
   padding: 10px;
   margin: 5px 0;
@@ -18,4 +23,4 @@ button{
 .btnPage{
   padding: 4px;
   margin: 0 20px;
-}
+} */
